--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.3.1",
+    "axios": "^0.21.1",
     "core-js": "~3.12.1",
     "cube-ui": "^1.12.46",
     "swiper": "^5.2.1",
