--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "less": "~3.13.1",
     "less-loader": "~5.0.0",
     "lib-flexible": "~0.3.2",
+    "mockjs": "^1.1.0",
     "postcss-px2rem": "~0.3.0",
     "stylus": "~0.54.8",
     "stylus-loader": "~5.0.0",
